feat: add responsive css

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link rel="stylesheet" href="./assets/style.css">
   </head>
 <body>
-  <header id="header-wrapper" class="container-fluid p-4">
+  <header id="header-wrapper" class="container-fluid d-flex justify-content-center align-items-center">
     <h1 class="header-title">Estate '24</h1>
   </header>
 
-  <main id="main-wrapper"class="overflow-scroll">
+  <main id="main-wrapper" class="overflow-scroll">
     <div class="polaroid-wrapper d-flex flex-wrap container p-5">
       <div class="polaroid position-relative">
         <div class="pin position-absolute">
