feat: add script for image generation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Vibur&display=swap" rel="stylesheet">
   <!-- Custom CSS  -->
   <link rel="stylesheet" href="./assets/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.8/axios.min.js" integrity="sha512-v8+bPcpk4Sj7CKB11+gK/FnsbgQ15jTwZamnBf/xDmiQDcgOIYufBo6Acu1y30vrk8gg5su4x0CG3zfPaq5Fcg==" crossorigin="anonymous"></script>
   </head>
 <body>
   <header id="header-wrapper" class="container-fluid d-flex justify-content-center align-items-center">
@@ -19,7 +20,7 @@
   </header>
 
   <main id="main-wrapper" class="overflow-scroll">
-    <div class="polaroid-wrapper d-flex flex-wrap container p-5">
+    <div id="polaroid-wrapper" class="polaroid-wrapper d-flex flex-wrap container p-5">
       <div class="polaroid position-relative">
         <div class="pin position-absolute">
           <img src="./assets/img/pin.svg" alt="">
