--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="header-title">Estate '24</h1>
   </header>
 
-  <main id="main-wrapper" class="overflow-scroll">
+  <main id="main-wrapper" class="overflow-auto">
     <div id="polaroid-wrapper" class="polaroid-wrapper d-flex flex-wrap container p-5">
       <div class="polaroid position-relative">
         <div class="pin position-absolute">
