--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.8/axios.min.js" integrity="sha512-v8+bPcpk4Sj7CKB11+gK/FnsbgQ15jTwZamnBf/xDmiQDcgOIYufBo6Acu1y30vrk8gg5su4x0CG3zfPaq5Fcg==" crossorigin="anonymous"></script>
   </head>
 <body>
+  <section id="lightbox" class="d-flex flex-column align-items-center justify-content-around">
+    <button class="btn btn-secondary">Chiudi</button>
+    <div id="lightbox-image-wrapper">
+      <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="">
+    </div>
+  </section>
   <header id="header-wrapper" class="container-fluid d-flex justify-content-center align-items-center">
     <h1 class="header-title">Estate '24</h1>
   </header>
