feat: code refactior + infinite scroll on 144 photos received from API

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.8/axios.min.js" integrity="sha512-v8+bPcpk4Sj7CKB11+gK/FnsbgQ15jTwZamnBf/xDmiQDcgOIYufBo6Acu1y30vrk8gg5su4x0CG3zfPaq5Fcg==" crossorigin="anonymous"></script>
   </head>
 <body>
-  <section id="lightbox" class="d-flex flex-column align-items-center justify-content-around">
+  <section id="lightbox" class="d-flex flex-column align-items-center justify-content-around d-none">
     <button class="btn btn-secondary">Chiudi</button>
     <div id="lightbox-image-wrapper">
       <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="">
@@ -27,79 +27,9 @@
 
   <main id="main-wrapper" class="overflow-auto">
     <div id="polaroid-wrapper" class="polaroid-wrapper d-flex flex-wrap container p-5">
-      <div class="polaroid position-relative">
-        <div class="pin position-absolute">
-          <img src="./assets/img/pin.svg" alt="">
-        </div>
-        <div class="photo-wrapper">
-          <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="example pic">
-        </div>
-        <div class="photo-caption">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="polaroid position-relative">
-        <div class="pin position-absolute">
-          <img src="./assets/img/pin.svg" alt="">
-        </div>
-        <div class="photo-wrapper">
-          <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="example pic">
-        </div>
-        <div class="photo-caption">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="polaroid position-relative">
-        <div class="pin position-absolute">
-          <img src="./assets/img/pin.svg" alt="">
-        </div>
-        <div class="photo-wrapper">
-          <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="example pic">
-        </div>
-        <div class="photo-caption">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="polaroid position-relative">
-        <div class="pin position-absolute">
-          <img src="./assets/img/pin.svg" alt="">
-        </div>
-        <div class="photo-wrapper">
-          <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="example pic">
-        </div>
-        <div class="photo-caption">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="polaroid position-relative">
-        <div class="pin position-absolute">
-          <img src="./assets/img/pin.svg" alt="">
-        </div>
-        <div class="photo-wrapper">
-          <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="example pic">
-        </div>
-        <div class="photo-caption">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="polaroid position-relative">
-        <div class="pin position-absolute">
-          <img src="./assets/img/pin.svg" alt="">
-        </div>
-        <div class="photo-wrapper">
-          <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="example pic">
-        </div>
-        <div class="photo-caption">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
     </div>
   </main>
-  <script src="./assets/script.js"></script>
+  <script src="./assets/js/functions.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
