feat: add API lag management

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="lightbox" class="d-flex flex-column align-items-center justify-content-around d-none">
     <button class="btn btn-secondary">Chiudi</button>
     <div id="lightbox-image-wrapper">
-      <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="">
+      <img src="https://imgs.search.brave.com/f8H9Vs-qxvg7MfG_Qq_myMS8UtfsI3mx0Vs0uCNi_lc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbGFj/ZWhvbGQuaW4vNjAw" alt="fullscreen image">
     </div>
   </section>
   <header id="header-wrapper" class="container-fluid d-flex justify-content-center align-items-center">
